[package]
description = "Rust client using the Reqwest HTTP client and Serde JSON library"
edition = "2018"
license = "MIT"
name = "neutrino_api_client_reqwest"
version = "4.6.13"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json", "stream"] }
serde_json = { version = "1.0" }
uuid = { version = "0.8", features = ["serde", "v4"] }