[package]
name = "neutrino_api_client_reqwest"
description = "Neutrino API Rust client using the Reqwest HTTP and Serde JSON libraries"
edition = "2018"
license = "MIT"
version = "4.6.15"
homepage = "https://www.neutrinoapi.com"
repository = "https://github.com/NeutrinoAPI/neutrino-api-client-reqwest"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["neutrino-api", "security", "geolocation", "rendering", "e-commerce"]

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json", "stream"] }
serde_json = { version = "1.0" }
uuid = { version = "0.8", features = ["serde", "v4"] }
