[package]
name = "neutrino_api_client_reqwest"
description = "Neutrino API Rust client using the Reqwest HTTP and Serde JSON libraries"
version = "4.7.1"
edition = "2018"
license = "MIT"
homepage = "https://www.neutrinoapi.com"
repository = "https://github.com/NeutrinoAPI/neutrino-api-client-reqwest"
documentation = "https://github.com/NeutrinoAPI/neutrino-api-client-reqwest"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["neutrino-api", "security", "geolocation", "rendering", "e-commerce", "telephony"]

[dependencies]
reqwest = { version = "0.12", features = ["native-tls", "native-tls-alpn", "http2", "blocking", "json", "stream"] }
serde_json = { version = "1.0" }
